--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain-studio-id",
+  "name": "blog-web3id",
   "version": "0.1.0",
   "description": "Welcome To New Decentralized World! Our Mission is Simple, Let’s Make Blockchain And Cryptocurrency Easy To World",
   "main": "index.js",
