--- a/package.json
+++ b/package.json
@@ -59,40 +59,39 @@
     ]
   },
   "dependencies": {
-    "body-scroll-lock": "^4.0.0-beta.0",
+    "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
-    "idb-keyval": "6.1.0",
-    "next": "^12.1.0",
-    "next-offline": "^5.0.5",
-    "next-seo": "^5.1.0",
-    "next-themes": "0.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.0"
+    "idb-keyval": "5.0.4",
+    "next": "^10.0.1",
+    "next-offline": "^5.0.3",
+    "next-seo": "^4.17.0",
+    "next-themes": "0.0.14",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
-    "@types/body-scroll-lock": "^3.1.0",
-    "@types/classnames": "^2.3.1",
-    "@types/gtag.js": "^0.0.8",
-    "@types/node": "^17.0.20",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "8.4.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
+    "@types/body-scroll-lock": "^2.6.1",
+    "@types/classnames": "^2.2.11",
+    "@types/gtag.js": "^0.0.4",
+    "@types/node": "^14.14.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "autoprefixer": "^10.0.2",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "next-unused": "0.0.6",
-    "postcss": "^8.4.6",
-    "postcss-import": "^14.0.2",
-    "postcss-nesting": "^10.1.2",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.5.5"
+    "postcss": "^8.1.10",
+    "postcss-nesting": "^7.0.1",
+    "prettier": "^2.1.2",
+    "tailwindcss": "^2.0.1",
+    "typescript": "^4.0.5"
   }
 }
