--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-API_URL=http://localhost:1337
-PREVIEW_SECRET=http://localhost:1337/api/:contentType-preview?secret=YOUR_SECRET&id=:id
-GA_MEASUREMENT_ID=YOUR_MEASUREMENT_ID
+API_URL=
+PREVIEW_SECRET=
+GA_MEASUREMENT_ID=
